Add in memory db

--- a/src/app/timecard.component.html
+++ b/src/app/timecard.component.html
@@ -33,7 +33,7 @@
 
         <mat-menu #menu="matMenu">
           <button mat-menu-item (click)="openAddDialog()">New something</button>
-          <button mat-menu-item (click)="loadWams()">Load WAMs</button>
+          <button mat-menu-item (click)="showDoc()">Show Documentation</button>
         </mat-menu>
 
       </mat-toolbar>
