--- a/src/app/components/allocation/allocation.component.html
+++ b/src/app/components/allocation/allocation.component.html
@@ -1,4 +1,4 @@
-<div class="example-container mat-elevation-z8">
+<div class="mat-elevation-z8">
 
   <h3>Allocations</h3>
 
@@ -31,6 +31,10 @@
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
 
-  <mat-paginator #paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 20]">
+  <mat-paginator #paginator
+    [length]="dataSource.data.length"
+    [pageIndex]="0"
+    [pageSize]="5"
+    [pageSizeOptions]="[5, 10, 20]">
   </mat-paginator>
 </div>
