--- a/src/app/components/wam/wam.component.html
+++ b/src/app/components/wam/wam.component.html
@@ -1,4 +1,4 @@
-<div class="example-container mat-elevation-z8">
+<div class="mat-elevation-z8">
 
   <h3>WAMs</h3>
 
@@ -47,6 +47,8 @@
   </mat-table>
 
   <mat-paginator #paginator
+    [length]="dataSource.data.length"
+    [pageIndex]="0"
     [pageSize]="5"
     [pageSizeOptions]="[5, 10, 20]">
   </mat-paginator>
