--- a/src/app/components/allocation/allocation.component.html
+++ b/src/app/components/allocation/allocation.component.html
@@ -1,40 +1,41 @@
-<div class="mat-elevation-z8">
+<div>
 
   <h3>Allocations</h3>
 
-  <!--
-  <div class="example-header">
+  <div class="mat-elevation-z8">
+
     <mat-form-field>
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
     </mat-form-field>
+
+    <mat-table class="scroll-bars" [dataSource]="dataSource" matSort>
+
+      <ng-container matColumnDef="project">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Project </mat-header-cell>
+        <mat-cell *matCellDef="let alloc"> {{alloc.project}} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="task">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Task </mat-header-cell>
+        <mat-cell *matCellDef="let alloc"> {{alloc.task}} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="percentage">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Percentage </mat-header-cell>
+        <mat-cell *matCellDef="let alloc"> {{alloc.percentage}} </mat-cell>
+      </ng-container>
+
+      <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+
+    <mat-paginator
+      [length]="allocation?.length"
+      [pageIndex]="0"
+      [pageSize]="5"
+      [pageSizeOptions]="[5, 10, 20]">
+    </mat-paginator>
+
   </div>
--->
 
-  <mat-table #table [dataSource]="dataSource" matSort>
-
-    <ng-container matColumnDef="project">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Project </mat-header-cell>
-      <mat-cell *matCellDef="let alloc"> {{alloc.project}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="task">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Task </mat-header-cell>
-      <mat-cell *matCellDef="let alloc"> {{alloc.task}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="percentage">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Percentage </mat-header-cell>
-      <mat-cell *matCellDef="let alloc"> {{alloc.percentage}} </mat-cell>
-    </ng-container>
-
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  </mat-table>
-
-  <mat-paginator #paginator
-    [length]="dataSource.data.length"
-    [pageIndex]="0"
-    [pageSize]="5"
-    [pageSizeOptions]="[5, 10, 20]">
-  </mat-paginator>
 </div>
