User name isn't initially available, elvis with stop the errors.

--- a/src/app/timecard.component.html
+++ b/src/app/timecard.component.html
@@ -25,7 +25,7 @@
           <mat-icon>menu</mat-icon>
         </button>
 
-        <span>Timecard for {{timecard.userName}}</span>
+        <span>Timecard for {{timecard?.userName}}</span>
 
         <span class="example-spacer"></span>
 
